--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "firefox-power-close",
   "title": "firefox-power-close",
   "id": "jid1-TRtOYHYN34lsiA",
-  "description": "a basic add-on",
+  "description": "A firefox addon, for the tab addict, to close all tabs with urls containing a keyword or a domain name",
   "author": "",
   "license": "MPL 2.0",
-  "version": "0.1"
+  "version": "0.2"
 }
