--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "firefox-power-close",
-  "title": "firefox-power-close",
+  "title": "Power Close",
   "id": "jid1-TRtOYHYN34lsiA",
   "description": "A firefox addon, for the tab addict, to close all tabs with urls containing a keyword or a domain name",
-  "author": "",
+  "author": "Mosab Ahmad <mosab.ahmad@gmail.com>",
   "license": "MPL 2.0",
   "version": "0.2"
 }
