--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   },
   "homepage": "https://github.com/mos3abof/firefox-power-close#readme",
   "devDependencies": {
+    "babel-preset-es2015": "~6.9.0",
     "grunt": "~1.0.1",
     "grunt-babel": "~6.0.0",
-    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-cssmin": "~1.0.1",
+    "grunt-contrib-htmlmin": "~1.4.0",
     "grunt-contrib-jshint": "~1.0.0",
     "grunt-contrib-uglify": "~1.0.1",
-    "grunt-crx": "~0.3.4",
+    "grunt-crx": "~1.0.3",
     "grunt-jscs": "~2.8.0",
     "grunt-karma": "~1.0.0",
     "karma": "~0.13.22",
