--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-contrib-jshint": "~1.0.0",
     "grunt-contrib-uglify": "~1.0.1",
     "grunt-crx": "~1.0.3",
+    "grunt-jpm": "~0.1.3",
     "grunt-jscs": "~2.8.0",
     "grunt-karma": "~1.0.0",
     "karma": "~0.13.22",
