--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-jscs": "~2.8.0",
     "grunt-karma": "~1.0.0",
     "karma": "~0.13.22",
+    "karma-coverage": "~1.0.0",
     "karma-babel-preprocessor": "~6.0.1",
     "karma-jasmine": "~1.0.2 ",
     "karma-phantomjs-launcher": "~1.0.0",
