--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A browser extension, for the tab addict, to close all tabs with urls containing a keyword or a domain name. For example, if you have many facebook tabs open and not in order, you can just use this extension, write \"facebook.com\", hit enter and voila, all facebook tabs -containing the string 'facebook.com'- are now closed!",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mos3abof/firefox-power-close.git"
+    "url": "https://github.com/mos3abof/power-close.git"
   },
   "keywords": [
     "power",
@@ -18,9 +18,9 @@
   "author": "mos3abof",
   "license": "GPL-2.0",
   "bugs": {
-    "url": "https://github.com/mos3abof/firefox-power-close/issues"
+    "url": "https://github.com/mos3abof/power-close/issues"
   },
-  "homepage": "https://github.com/mos3abof/firefox-power-close#readme",
+  "homepage": "https://www.power-close.com",
   "devDependencies": {
     "babel-preset-es2015": "~6.9.0",
     "grunt": "~1.0.1",
